crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/constant_cycles/constants/indirect_cycle/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 5210] Error: Cyclic constant definition (or maximum recursion depth exhausted).
   ╭─[input.sol:9:5]
   │
 9 │     uint256 constant D = C;
   │     ───────────┬──────────  
   │                ╰──────────── Error occurred here.
───╯
